--- a/plugins/dynamix/CPUset.page
+++ b/plugins/dynamix/CPUset.page
@@ -1,5 +1,5 @@
 Menu="OtherSettings"
-Title="CPU Pinning"
+Title="CPU Pinning VM"
 Type="xmenu"
 Icon="grid.png"
 Tag="map-marker"
@@ -195,26 +195,12 @@ $(function(){
 </form>
 <?endif;?>
 
-<?if ($dockerd):?>
-<form name="ct">
-<input type="hidden" name="names" id="names-ct" value="">
-<table class='tablesorter <?=$libvirtd?'':'shift'?>' style='width:auto'>
-<thead><tr><th><i class="fa fa-list"></i> Container</th><?create()?></tr></thead>
-<tbody id="table-ct"><?=$spinner?></tbody>
-</table>
-<input type="button" value="Apply" onclick="apply(this.form)" disabled><input type="button" value="Done" onclick="done()"><span id="wait-ct" class="red-text" style="display:none"><i class="fa fa-spinner fa-spin"></i> Please wait...</span>
-</form>
-<?endif;?>
-
-> This page gives a total view of the current CPU pinning assignments for both VMs and Docker containers.<br>
+> This page gives a total view of the current CPU pinning assignments for VMs.<br>
 > It also allows to modify these assignments.
 >
-> Running VMs or containers are **stopped first** and restarted after the modification.<br>
-> Stopped VMs or containers are instantly modified and new assignments become active when the user manually starts the VM or container.
+> Running VMs are **stopped first** and restarted after the modification.<br>
+> Stopped VMs are instantly modified and new assignments become active when the user manually starts the VM.
 >
-> When ***Apply*** is pressed a scan is performed to find the changes, subsequently only VMs or containers which have changes are modified in parallel.
+> When ***Apply*** is pressed a scan is performed to find the changes, subsequently only VMs which have changes are modified in parallel.
 >
 > *Important: Please wait until all updates are finished before leaving this page*.
->
-> By default NO cores are selected for a Docker container, which means it uses all available cores.<br>
-> Do not select **ALL** cores for containers, just select **NO** cores if you want unrestricted core use.
