--- a/plugins/dynamix/CPUpin.page
+++ b/plugins/dynamix/CPUpin.page
@@ -23,6 +23,8 @@ Tag="map-marker"
 </table>
 <input type="button" value="Apply" onclick="apply(this.form)" disabled><input type="button" value="Done" onclick="done()"><span id="wait-ct" class="red-text" style="display:none"><i class="fa fa-spinner fa-spin"></i> Please wait...</span>
 </form>
+<?else:?>
+<div class="notice">No CPU pinning available. Docker service must be started</div>
 <?endif;?>
 
 > This page gives a total view of the current CPU pinning assignments for Docker containers.<br>
