--- a/plugins/dynamix/CPUisol.page
+++ b/plugins/dynamix/CPUisol.page
@@ -22,7 +22,11 @@ Tag="leaf"
 </table>
 <input type="button" value="Apply" onclick="apply(this.form)" disabled><input type="button" value="Done" onclick="done()"><span id="wait-is" class="red-text" style="display:none"><i class="fa fa-spinner fa-spin"></i> Please wait...</span>
 </form>
+<?if (!$safemode):?>
 <div class="notice isol" style="display:none">System must be rebooted for changes to take effect!</div>
+<?else:?>
+<div class="notice">CPU isolation is prohibited while system is running in SAFE MODE!</div>
+<?endif;?>
 
 > CPU isolation allows the user to specify CPU cores that are to be explicitly reserved for assignment (to VMs or Docker containers).
 >
