Updated parity help text and simplified cron entries

--- a/plugins/dynamix/ParityCheck.page
+++ b/plugins/dynamix/ParityCheck.page
@@ -115,7 +115,7 @@ Day of the week:
 <?endif;?>
   </select>
 
-> When a weekly or custom schedule is selected then choose here the preferred day of the week, otherwise this setting is unavailable.
+> When a **weekly** or **custom** schedule is selected then choose here the preferred *day of the week*, in the other schedules this setting is not used and unavailable.
 
 <?if ($parity['mode']<5):?>
 Day of the month:
@@ -143,7 +143,8 @@ Week of the month:
 <?endif;?>
   </select>
 
-> When a monthly, yearly or custom schedule is selected then choose here the preferred day of the month, otherwise this setting is unavailable.
+> When a **monthly** or **yearly** schedule is selected then choose here the preferred *day of the month*.
+> When a **custom** schedule is selected then choose here the preferred *week of the month*, in the other schedules this setting is not used and unavailable.
 
 Time of the day:
 : <select name="hour" size="1">
@@ -157,7 +158,7 @@ Time of the day:
 <?endif;?>
   </select>
 
-> Choose the desired time to start the schedule. Granularity is given in half hour periods.
+> Choose the desired *time of the day* to start the schedule. Time granularity is given in half hour periods.
 
 Month of the year:
 <?if ($parity['mode']>=4):?>
@@ -178,7 +179,7 @@ Month of the year:
 <?endif;?>
   </select>
 
-> When a yearly or custom schedule is selected then choose here the preferred month of the year, otherwise this setting is unavailable.
+> When a **yearly** or **custom** schedule is selected then choose here the preferred *month of the year*, in the other schedules this setting is not used and unavailable.
 
 Write corrections to parity disk:
 : <select name="write" size="1">
