VM settings: css corrections

--- a/plugins/dynamix.vm.manager/VMSettings.page
+++ b/plugins/dynamix.vm.manager/VMSettings.page
@@ -69,12 +69,12 @@ body{-webkit-overflow-scrolling:touch}
 .advanced{display:none}
 #winvirtio{display:none}
 #download_status{margin-left:5px;color:#777;display:none}
-#download_button{cursor:pointer;margin-left:-2px;color:#08C;font-size:14px;display:none;transform:translate(0px,2px)}
+#download_button{cursor:pointer;margin-left:-2px;color:#08C;display:none;transform:translate(0px,2px)}
 #download_button.fa-spin{cursor:default;color:#777}
-#download_button span{font-size:14px;vertical-align:top}
-#download_button.fa-spin span{display:none}
-#remove_button{cursor:pointer;margin-left:-2px;color:#EF3D47;font-size:14px;display:none;transform:translate(0px,2px)}
-#remove_button span{font-size:14px;vertical-align:top}
+#download_button span{font-family:clear-sans}
+#download_button.fa-spin span{font-family:clear-sans;display:none}
+#remove_button{cursor:pointer;margin-left:-2px;color:#EF3D47;display:none;transform:translate(0px,2px)}
+#remove_button span{font-family:clear-sans}
 </style>
 
 <span class="status vhshift"><input type="checkbox" class="advancedview"></span>
