Dashboard: fixed incorrect username references

--- a/plugins/dynamix/DashStats.page
+++ b/plugins/dynamix/DashStats.page
@@ -261,8 +261,9 @@ endforeach;
 <tbody class='smb'>
 <?
 foreach ($users as $user):
-  $list = truncate($user['name'],12);
-  $desc = truncate($user['desc'],28);
+  $list = truncate($user['name'],20);
+  $desc = truncate($user['desc'],40);
+  $hrefLink = urlencode($user['name']);
   if ($list=='root'):
     $write = '-'; $read = '-';
   else:
@@ -272,7 +273,7 @@ foreach ($users as $user):
       if (strpos($sec[$share['name']]['readList'],$list)!==false) $read++;
     endforeach;
   endif;
-  echo "<tr><td><a href='/Users/UserEdit?name=$list'>$list</a></td><td>$desc</td><td>$write</td><td>$read</td></tr>";
+  echo "<tr><td><a href='/Users/UserEdit?name=$hrefLink'>$list</a></td><td>$desc</td><td>$write</td><td>$read</td></tr>";
 endforeach;
 ?>
 </tbody>
@@ -281,8 +282,9 @@ endforeach;
 <tbody class='afp'<?if ($var['shareSMBEnabled']=='yes'):?> style='display:none'<?endif;?>>
 <?
 foreach ($users as $user):
-  $list = truncate($user['name'],12);
-  $desc = truncate($user['desc'],28);
+  $list = truncate($user['name'],20);
+  $desc = truncate($user['desc'],40);
+  $hrefLink = urlencode($user['name']);
   if ($list=='root'):
     $write = '-'; $read = '-';
   else:
@@ -292,7 +294,7 @@ foreach ($users as $user):
       if (strpos($sec_afp[$share['name']]['readList'],$list)!==false) $read++;
     endforeach;
   endif;
-  echo "<tr><td><a href='/Users/UserEdit?name=$list'>$list</a></td><td>$desc</td><td>$write</td><td>$read</td></tr>";
+  echo "<tr><td><a href='/Users/UserEdit?name=$hrefLink'>$list</a></td><td>$desc</td><td>$write</td><td>$read</td></tr>";
 endforeach;
 ?>
 </tbody>
@@ -301,10 +303,11 @@ endforeach;
 <tbody class='nfs'<?if ($var['shareSMBEnabled']=='yes'||$var['shareAFPEnabled']=='yes'):?> style='display:none'<?endif;?>>
 <?
 foreach ($users as $user):
-  $list = truncate($user['name'],12);
-  $desc = truncate($user['desc'],28);
+  $list = truncate($user['name'],20);
+  $desc = truncate($user['desc'],40);
+  $hrefLink = urlencode($user['name']);
   $write = '-'; $read = '-';
-  echo "<tr><td><a href='/Users/UserEdit?name=$list'>$list</a></td><td>$desc</td><td>$write</td><td>$read</td></tr>";
+  echo "<tr><td><a href='/Users/UserEdit?name=$hrefLink'>$list</a></td><td>$desc</td><td>$write</td><td>$read</td></tr>";
 endforeach;
 ?>
 </tbody>
@@ -313,9 +316,10 @@ endforeach;
 <tbody>
 <?
 foreach ($users as $user):
-  $list = truncate($user['name'],12);
-  $desc = truncate($user['desc'],28);
-  echo "<tr><td><a href='/Users/UserEdit?name=$list'>$list</a></td><td>$desc</td><td>-</td><td>-</td></tr>";
+  $list = truncate($user['name'],20);
+  $desc = truncate($user['desc'],40);
+  $hrefLink = urlencode($user['name']);
+  echo "<tr><td><a href='/Users/UserEdit?name=$hrefLink'>$list</a></td><td>$desc</td><td>-</td><td>-</td></tr>";
 endforeach;
 ?>
 </tbody>
@@ -343,9 +347,9 @@ endforeach;
 $i = 0;
 foreach ($shares as $name => $share):
   $i++;
-  $list = truncate($name,12);
-  $hrefLink = str_replace(" ","+",$name);
-  $comment = truncate($share['comment'],28);
+  $list = truncate($name,20);
+  $hrefLink = urlencode($name);
+  $comment = truncate($share['comment'],40);
   $security = export_settings($var['shareSMBEnabled'], $sec[$name]);
   echo "<tr><td><a href='/Shares/Share?name=$hrefLink'>$list</a></td><td>$comment</td><td>$security</td><td class='blue' id='share{$i}'>0</td></tr>";
 endforeach;
@@ -357,9 +361,9 @@ if (!count($shares)) echo "<tr><td colspan='4' style='text-align:center;padding-
 <tbody class='afp'<?if ($var['shareSMBEnabled']=='yes'):?> style='display:none'<?endif;?>>
 <?
 foreach ($shares as $name => $share):
-  $list = truncate($name,12);
-  $hrefLink = str_replace(" ","+",$name);
-  $comment = truncate($share['comment'],28);
+  $list = truncate($name,20);
+  $hrefLink = urlencode($name);
+  $comment = truncate($share['comment'],40);
   $security = export_settings($var['shareAFPEnabled'], $sec_afp[$name]);
   echo "<tr><td><a href='/Shares/Share?name=$hrefLink'>$list</a></td><td>$comment</td><td>$security</td><td>-</td></tr>";
 endforeach;
@@ -371,9 +375,9 @@ if (!count($shares)) echo "<tr><td colspan='4' style='text-align:center;padding-
 <tbody class='nfs'<?if ($var['shareSMBEnabled']=='yes'||$var['shareAFPEnabled']=='yes'):?> style='display:none'<?endif;?>>
 <?
 foreach ($shares as $name => $share):
-  $list = truncate($name,12);
-  $hrefLink = str_replace(" ","+",$name);
-  $comment = truncate($share['comment'],28);
+  $list = truncate($name,20);
+  $hrefLink = urlencode($name);
+  $comment = truncate($share['comment'],40);
   $security = export_settings($var['shareNFSEnabled'], $sec_nfs[$name]);
   echo "<tr><td><a href='/Shares/Share?name=$hrefLink'>$list</a></td><td>$comment</td><td>$security</td><td>-</td></tr>";
 endforeach;
@@ -385,9 +389,9 @@ if (!count($shares)) echo "<tr><td colspan='4' style='text-align:center;padding-
 <tbody>
 <?
 foreach ($shares as $name => $share):
-  $list = truncate($name,12);
-  $hrefLink = str_replace(" ","+",$name);
-  $comment = truncate($share['comment'],28);
+  $list = truncate($name,20);
+  $hrefLink = urlencode($name);
+  $comment = truncate($share['comment'],40);
   echo "<tr><td><a href='/Shares/Share?name=$hrefLink'>$list</a></td><td>$comment</td><td>-</td><td>-</td></tr>";
 endforeach;
 if (!count($shares)) echo "<tr><td colspan='4' style='text-align:center;padding-top:12px'>No shares present</td></tr>";
