Adjusted font size

--- a/plugins/dynamix/NetworkRules.page
+++ b/plugins/dynamix/NetworkRules.page
@@ -82,5 +82,5 @@ Interface <?=$eth?>:
 > Deleting the file *network-rules.cfg* from the flash device will restore automatic interface assignment after a system reboot.
 
 <?if (file_exists('/tmp/network-rules.tmp')):?>
-<br><span class="error" style="font-size:13px;text-align:center;padding:12px 0">Please <span class="strong big">Reboot</span> system to make new rules active</span>
+<br><span class="error" style="text-align:center;padding:12px 0">Please <span class="strong big">Reboot</span> system to make new rules active</span>
 <?endif;?>
