--- a/plugins/dynamix/SmtpSettings.page
+++ b/plugins/dynamix/SmtpSettings.page
@@ -186,5 +186,5 @@ Password:
 
 &nbsp;
 : <input type="submit" name="#apply" value="Apply" disabled><input type="button" value="Done" onclick="done()">
-  <span id="testresult" style="font-size:13px"><input type="button" id="testbutton" value="Test"<?if ($incomplete):?> disabled<?endif;?>></span>
+  <span id="testresult"><input type="button" id="testbutton" value="Test"<?if ($incomplete):?> disabled<?endif;?>></span>
 </form>
