--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -1,5 +1,5 @@
 html{font-family:clear-sans;height:100%}
-body{font-size:14px;color:#606e7f;background-color:#e4e2e4;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+body{font-size:13px;color:#606e7f;background-color:#e4e2e4;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 @media (max-width:1280px){#template{min-width:1280px;margin:0}}
 @media (min-width:1281px){#template{min-width:1280px;margin:0}}
 @media (min-width:1921px){#template{min-width:1280px;max-width:1920px;margin:0 auto}}
@@ -12,7 +12,7 @@ a{color:#486dba;text-decoration:none}
 a.none{color:#606e7f}
 a.img{text-decoration:none;border:none}
 a.info{position:relative}
-a.info span{display:none;white-space:nowrap;font-variant:small-caps;position:absolute;top:16px;left:12px;color:#4f4f4f;font-size:13px;line-height:20px;padding:5px 8px;border:1px solid #42453e;border-radius:3px;background-color:#edeaef}
+a.info span{display:none;white-space:nowrap;font-variant:small-caps;position:absolute;top:16px;left:12px;color:#4f4f4f;font-size:12px;line-height:20px;padding:5px 8px;border:1px solid #42453e;border-radius:3px;background-color:#edeaef}
 a.info:hover span{display:block;z-index:1}
 a.nohand{cursor:default}
 i.spacing{margin-left:0;margin-right:10px}
@@ -20,10 +20,10 @@ i.icon{margin-right:4px}
 i.title{display:none}
 pre ul{margin:0;padding-top:0;padding-bottom:0;padding-left:28px}
 pre li{margin:0;padding-top:0;padding-bottom:0;padding-left:18px}
-big{font-size:15px;font-weight:bold;text-transform:uppercase}
+big{font-size:14px;font-weight:bold;text-transform:uppercase}
 hr{border:none;height:1px!important;color:#606e7f;background-color:#606e7f}
-input[type=text],input[type=password],input[type=number],input[type=url],input[type=email],input[type=date],input[type=file],textarea,.textarea{font-family:clear-sans;font-size:14px;background:transparent;border:1px solid #606e7f;padding:5px 10px;min-height:20px;line-height:20px;outline:none;width:304px;margin:0 20px 0 0;box-shadow:none;color:#606e7f}
-input[type=button],input[type=reset],input[type=submit],button,button[type=button],a.button{font-family:clear-sans;font-size:13px;border:1px solid #9F9180;border-radius:5px;margin:10px 20px 10px 0;padding:8px 12px;cursor:pointer;outline:none;color:#9F9180;background:#edeaef}
+input[type=text],input[type=password],input[type=number],input[type=url],input[type=email],input[type=date],input[type=file],textarea,.textarea{font-family:clear-sans;font-size:13px;background:transparent;border:1px solid #606e7f;padding:5px 10px;min-height:20px;line-height:20px;outline:none;width:304px;margin:0 20px 0 0;box-shadow:none;color:#606e7f}
+input[type=button],input[type=reset],input[type=submit],button,button[type=button],a.button{font-family:clear-sans;font-size:12px;border:1px solid #9F9180;border-radius:5px;margin:10px 20px 10px 0;padding:8px 12px;cursor:pointer;outline:none;color:#9F9180;background:#edeaef}
 input[type=checkbox]{vertical-align:middle;margin-right:6px}
 input[type=number]::-webkit-outer-spin-button,input[type=number]::-webkit-inner-spin-button{-webkit-appearance:none}
 input[type=number]{-moz-appearance:textfield}
@@ -32,7 +32,7 @@ input:hover[type=button],input:hover[type=reset],input:hover[type=submit],button
 input:active[type=button],input:active[type=reset],input:active[type=submit],button:active,button:active[type=button],a.button:active{border-color:#0072C6;box-shadow:none}
 input[disabled],button[disabled],input:hover[type=button][disabled],input:hover[type=reset][disabled],input:hover[type=submit][disabled],button:hover[disabled],button:hover[type=button][disabled],input:active[type=button][disabled],input:active[type=reset][disabled],input:active[type=submit][disabled],button:active[disabled],button:active[type=button][disabled],textarea[disabled]{color:#808080;border-color:#808080;background:#c7c5cb;opacity:0.5;cursor:default}
 input::-webkit-input-placeholder{color:#00529b}
-select{font-family:clear-sans;font-size:14px;min-width:188px;max-width:326px;padding:6px 6px;margin:0 10px 0 0;border:#606e7f 1px solid;box-shadow:none;color:#606e7f;background:transparent;outline:none;display:inline-block;cursor:pointer}
+select{font-family:clear-sans;font-size:13px;min-width:188px;max-width:326px;padding:6px 6px;margin:0 10px 0 0;border:#606e7f 1px solid;box-shadow:none;color:#606e7f;background:transparent;outline:none;display:inline-block;cursor:pointer}
 select option{color:#606e7f;background-color:#edeaef}
 select:focus{border-color:#0072C6}
 select[disabled]{color:#808080;border-color:#808080;background:#c7c5cb;opacity:0.5;cursor:default}
@@ -47,7 +47,7 @@ form+p{display:none}
 #header{position:fixed;top:0;left:0;width:100%;height:90px;z-index:100;margin:0;background-color:#edeaef;background-size:100% 90px;background-repeat:no-repeat;border-bottom:#9794a0 1px solid}
 #header .logo{float:left;margin-left:75px;color:#e22828;width:160px;text-align:center}
 #header .logo svg{width:160px;display:block;margin:25px 50px 8px 0}
-#header .block{margin:0;float:right;text-align:right;background-color:rgba(237,234,239,0.7);padding:6px 12px 7px 12px}
+#header .block{margin:0;float:right;text-align:right;background-color:rgba(237,234,239,0.7);padding:10px 12px}
 #header .text-left{float:left;text-align:right;padding-right:5px;border-right:solid medium #f15a2c}
 #header .text-right{float:right;text-align:left;padding-left:5px}
 #header .text-right a{color:#606e7f}
@@ -84,7 +84,7 @@ span.tub span[id^='txt-tub']{margin-top:7px}
 #footer{position:fixed;bottom:0;left:0;color:#808080;background:#121510;padding:5px 0;width:100%;height:16px;line-height:16px;text-align:center;z-index:100}
 #statusraid{float:left;padding-left:10px}
 #countdown{margin:0 auto}
-#copyright{font-family:bitstream;font-size:12px;float:right;padding-right:10px}
+#copyright{font-family:bitstream;font-size:11px;float:right;padding-right:10px}
 .green{color:#4F8A10;padding-left:5px;padding-right:5px}
 .red{color:#F0000C;padding-left:5px;padding-right:5px}
 .orange{color:#E68A00;padding-left:5px;padding-right:5px}
@@ -99,12 +99,12 @@ span.tub span[id^='txt-tub']{margin-top:7px}
 .usage-bar>span>span{padding-left:4px;color:#606e7f}
 .usage-disk{height:25px;line-height:25px;background-color:rgba(237,234,239,0.4)}
 .usage-disk>span{display:block;height:3px;background-color:#606e7f;text-align:left}
-.usage-disk>span>span{font-size:13px;color:#606e7f}
+.usage-disk>span>span{font-size:12px;color:#606e7f}
 .usage-disk.sys{background-color:transparent}
-.usage-disk.sys>span{font-size:13px}
+.usage-disk.sys>span{font-size:12px}
 .usage-disk.all{background-color:transparent}
-.usage-disk.all>span{font-size:12px}
-.notice{background:#FFF6BF url(../images/notice.png) no-repeat;background-position:60px 50%;font-size:16px;text-align:left;padding:15px 0 15px 130px;display:block;height:70px;line-height:70px;vertical-align:middle;border-top:1px solid #FFD324;border-bottom:1px solid #FFD324}
+.usage-disk.all>span{font-size:11px}
+.notice{background:#FFF6BF url(../images/notice.png) no-repeat;background-position:60px 50%;font-size:15px;text-align:left;padding:15px 0 15px 130px;display:block;height:70px;line-height:70px;vertical-align:middle;border-top:1px solid #FFD324;border-bottom:1px solid #FFD324}
 .greenbar{background:-webkit-radial-gradient(#127A05,#17BF0B);background:linear-gradient(#127A05,#17BF0B)}
 .orangebar{background:-webkit-radial-gradient(#CE7C10,#F0B400);background:linear-gradient(#CE7C10,#F0B400)}
 .redbar{background:-webkit-radial-gradient(#941C00,#DE1100);background:linear-gradient(#941C00,#DE1100)}
@@ -121,9 +121,9 @@ table.disk_status tr>td+td{width:auto}
 table.disk_status tr>td+td+td{width:6.5%;text-align:center;padding-left:4px;padding-right:8px}
 table.disk_status tr>td+td+td+td{text-align:right;padding-left:0;padding-right:12px}
 table.disk_status tr td:last-child{width:4%;padding-right:10px}
-table.disk_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:30px}
+table.disk_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:24px}
 table.disk_status.stats tr>td+td{text-align:left;padding-left:0;padding-right:12px}
-table.array_status{line-height:30px}
+table.array_status{line-height:24px}
 table.array_status td{padding:4px 0}
 table.array_status td:first-child{text-transform:uppercase}
 table.array_status tr>td{text-align:left;white-space:nowrap;padding-left:12px;width:30%}
@@ -141,7 +141,7 @@ table.share_status tr>td{text-align:left;padding-left:12px}
 table.share_status tr>td+td{padding-left:0}
 table.share_status tr.share_status_size>td{padding-left:40px}
 table.share_status tr.share_status_size>td+td{padding-left:15px}
-table.share_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:30px}
+table.share_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:24px}
 table.share_status tbody tr:last-child td{border-bottom:#606e7f 1px solid}
 table.share_status tbody tr.alert{color:#F0000C;background-color:#FF9E9E}
 table.share_status tbody tr.warn{color:#E68A00;background-color:#FEEFB3}
@@ -154,7 +154,7 @@ table.share_status.fixed tbody tr td:first-child{padding-right:10px}
 table.share_status.table{margin-top:36px}
 table.share_status.table tr>td{width:50%}
 table.share_status.dash{float:left;width:35%;margin-top:36px;margin-right:6px;border:none}
-table.share_status.dash thead tr:first-child td{line-height:30px}
+table.share_status.dash thead tr:first-child td{line-height:24px}
 table.share_status.dash thead tr:last-child>td{border-bottom:1px solid #606e7f;text-align:left;color:#606e7f}
 table.share_status.dash tbody td.blue{color:#606e7f}
 table.share_status.dash.line tbody tr.wide{height:40px;line-height:40px}
@@ -190,20 +190,20 @@ span.system{color:#00529b;background-color:#BDE5F8;display:block;width:100%}
 span.array{color:#4F8A10;background-color:#DFF2BF;display:block;width:100%}
 span.login{color:#D63301;background-color:#FFDDD1;display:block;width:100%}
 span.lite{background-color:#edeaef}
-span.label{font-size:12px;padding:2px 0 2px 6px;margin-right:6px;border-radius:4px;display:inline;width:auto;vertical-align:middle}
-span.temp-text{font-size:12px;color:#4F8A10}
-span.heat-text{font-size:12px;color:#F0000C}
+span.label{font-size:11px;padding:2px 0 2px 6px;margin-right:6px;border-radius:4px;display:inline;width:auto;vertical-align:middle}
+span.temp-text{font-size:11px;color:#4F8A10}
+span.heat-text{font-size:11px;color:#F0000C}
 span.cpu-speed{display:block;color:#3B5998}
-span.status{float:right;font-size:15px;letter-spacing:2px}
+span.status{float:right;font-size:14px;letter-spacing:2px}
 span.status.vhshift{margin-top:0;margin-right:0}
 span.status.vshift{margin-top:-16px}
 span.status.hshift{margin-right:-20px}
 span.diskinfo{float:left;clear:both;margin-top:5px;padding-left:10px}
-span.bitstream{font-family:bitstream;font-size:12px}
+span.bitstream{font-family:bitstream;font-size:11px}
 span.p0{padding-left:0}
 span.strong{font-weight:bold}
-span.big{font-size:15px}
-span.small{font-size:12px}
+span.big{font-size:14px}
+span.small{font-size:11px}
 span.one{margin-left:-16px}
 span.two{margin-left:-20px}
 span.three{margin-left:-23px}
@@ -233,7 +233,7 @@ div.Panel:hover .PanelText{text-decoration:underline}
 div.Panel br,.vmtemplate br{display:none}
 div.Panel img.PanelImg{float:left;width:auto;max-width:32px;height:32px;margin:10px}
 div.Panel i.PanelIcon{float:left;font-size:32px;margin:10px}
-div.Panel .PanelText{font-size:15px;padding-top:16px;text-align:center}
+div.Panel .PanelText{font-size:14px;padding-top:16px;text-align:center}
 div.user-list{float:left;padding:10px;margin-right:10px;margin-bottom:24px;border:1px solid #F3F0F4;border-radius:5px;line-height:20px;height:100px;width:100px}
 div.user-list img{width:auto;max-width:48px;height:48px;margin-bottom:16px}
 div.user-list:hover{background-color:#edeaef}
@@ -255,7 +255,7 @@ div.spinner .unraid_mark_7{animation:mark_7 1.5s ease infinite}
 @keyframes mark_7{50% {transform:translateY(62px)} 100% {transform: translateY(0px)}}
 pre.up{margin-top:0}
 pre{border:1px solid #F3F0F4;font-family:bitstream;font-size:12px;padding:0;overflow:auto;margin-bottom:10px;padding:10px}
-iframe#progressFrame{position:fixed;bottom:32px;left:60px;margin:0;padding:8px 8px 0 8px;width:100%;height:12px;line-height:12px;border-style:none;overflow:hidden;font-family:bitstream;font-size:12px;color:#808080;white-space:nowrap;z-index:-2}
+iframe#progressFrame{position:fixed;bottom:32px;left:60px;margin:0;padding:8px 8px 0 8px;width:100%;height:12px;line-height:12px;border-style:none;overflow:hidden;font-family:bitstream;font-size:11px;color:#808080;white-space:nowrap;z-index:-2}
 dl{margin-top:0;padding-left:12px;line-height:26px}
 dt{clear:left;float:left;width:35%}
 dd{margin-bottom:12px;white-space:nowrap}
